apps/media/qbittorrent/gateway.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: qbittorrent-gateway
  namespace: media
spec:
  gatewayClassName: cilium
  listeners:
    - name: https
      protocol: HTTPS
      port: 443
      hostname: qbittorrent.corruptmane.xyz
      tls:
        mode: Terminate
        certificateRefs:
          - name: qbittorrent-tls
