apps/media/qbittorrent/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: qbittorrent
  namespace: media
spec:
  parentRefs:
    - name: qbittorrent-gateway
  hostnames:
    - qbittorrent.corruptmane.xyz
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: qbittorrent
          port: 8080
